icones, imagens e controle na abertura dos forms

--- a/ControleEstacionamento/Visao/Admin/Usuario/FormUsuarioCrud.resx
+++ b/ControleEstacionamento/Visao/Admin/Usuario/FormUsuarioCrud.resx
@@ -117,4 +117,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnSalvarFuncionario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAAIMAAACDAWLvu1oAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAABA0lEQVQ4T2P4//8/Cs4+HK6WdTCqIfNQxOasQ5HPQBjMBoqB5NDVIzEY
+        GLMPRRYANXwD4v848DeQGpBaFANAAkDJrWiK8eGtMEPABkBtxqYQJwbpARsA9jN+ZyPjY0D8Acr+BtLL
+        AAocqABeDLRxb9oZX66sg+FucPHDEfUM0NDG0ICMYZrTdofyA/knYOIgvQxABiiqYIpfZR2O3IXEx6kZ
+        ip+hGJBxMNIp9GooG1DTRhCfgGaIAWheuJR7KFQUZAjIfwQ0Q72AGYhgQ0BRhE8zGIMCEUc0XsraH6MC
+        pHFrhkUjnoT0B4sYHIP0wFMixUkZZgjUJaRnJmQMDhOis/N/BgCugF9r5GAW+AAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAAG0AAABtAY5cH8oAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAA20lEQVQ4T6VTSQ6DMAx0v4E5ceB9/KB9BD+pegd+QlNx7wWOrickkCBS
+        VU2kQcaemcRZSEQivJjrsSxvhvn+ZJ4AxMihduTvP0SXkblRwayQBGZwwI0NVvHjRHAKcL2JNXAzn5JT
+        sCuBAfrSxLZsU9fyblsxVbWREduc1nxOMUNL2JwgaYkYS9dZIYAYA7WQa4riSm6392QgWIZBlr5fY2cY
+        cVVLGuCo4gJMVOwHTI5ihylt4GbGgFnS4GsLauJXkmwhexOzj1GN8y4SPtlXOTD58zEFQF+/P2ehD6t2
+        TX1HvyKUAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
