--- a/ControleEstacionamento/Visao/Cliente/FormClienteListar.resx
+++ b/ControleEstacionamento/Visao/Cliente/FormClienteListar.resx
@@ -120,66 +120,65 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnBuscarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAABCoAAAQqAdB/cBMAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
-        bmtzY2FwZS5vcmeb7jwaAAABr0lEQVQ4T2P4//8/HEckNUiF5XQvDy3sPxFWPuVmaPHEc1Glk45EZPc6
-        I6tDxnBGSFZnVmjFlAfhS3b/D199EIxTtp38X33y2v+0KWt+x1RO2Roa2sCGrBmEIZrTO/zDWhe8g2kE
-        a95+8n/N6RtgXHni2v/oedv+hmZ3L8IwICChQSCsaMKd8FUHcGqO3XAULB7WMu91aHqrK4oBIemtcWHT
-        1/+DaU7FoRmMgZaE5XVvRzEgNLdnUfjSPVDNp3BrhmJQwKIYEJbXs5tYzSAMih00A7r6klcfIEozCIOi
-        GMWA0PR2j6yFW/8Rozl88a7/Ibldy1AMAEYkY1T55DtlBy7g1wzEYWWT7gfFtEqiGAAigpJb5MNLJz+B
-        BSYGBoV+w+x3YZkd2cia4QaAcGhci3RYbu+R8N7ln8MX7IBoBBoYNnXd79DCCTdCUpoTwxIaVvmmNXBh
-        NQCGQxOb7MOyOzvCcnt2hOZ0zwlNaQ6Jje3mBskFxzdph8Q3LPPMncQOU49hACEcHNdkGJbYsNChoYEF
-        xMeqiBAOTmwyD4tvmN3Q0MCEVQExGGiAXVh8QxgAzPqmuX9vbA8AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
+        KgAABCoB0H9wEwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGvSURBVDhPY/j/
+        /z8cRyQ1SIXldC8PLew/EVY+5WZo8cRzUaWTjkRk9zojq0PGcEZIVmdWaMWUB+FLdv8PX30QjFO2nfxf
+        ffLa/7Qpa37HVE7ZGhrawIasGYQhmtM7/MNaF7yDaQRr3n7yf83pG2BceeLa/+h52/6GZncvwjAgIKFB
+        IKxowp3wVQdwao7dcBQsHtYy73VoeqsrigEh6a1xYdPX/4NpTsWhGYyBloTldW9HMSA0t2dR+NI9UM2n
+        cGuGYlDAohgQltezm1jNIAyKHTQDuvqSVx8gSjMIg6IYxYDQ9HaPrIVb/xGjOXzxrv8huV3LUAwARiRj
+        VPnkO2UHLuDXDMRhZZPuB8W0SqIYACKCklvkw0snP4EFJgYGhX7D7HdhmR3ZyJrhBoBwaFyLdFhu75Hw
+        3uWfwxfsgGgEGhg2dd3v0MIJN0JSmhPDEhpW+aY1cGE1AIZDE5vsw7I7O8Jye3aE5nTPCU1pDomN7eYG
+        yQXHN2mHxDcs88ydxA5Tj2EAIRwc12QYltiw0KGhgQXEx6qIEA5ObDIPi2+Y3dDQwIRVATEYaIBdWHxD
+        GADM+qa5f29sDwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnAdicionarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAABUIAAAVCAT5JfQgAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
-        bmtzY2FwZS5vcmeb7jwaAAAAe0lEQVQ4T92T0QnAIAxE3aV0hk5RuqODOICTuERJ8yCClINS/Go/HoR4
-        d2LUZGaSNR/bkvcK1EoDsgluLI4FRWlANsFNbQhoSgOyCR8KiGkzMAwjp9MDqO/rBS87cVVd+JY6HzB9
-        BDUYCFEP+PU7UE1w09xnitt5+M6WLhZNiSeIVqtyAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAF
+        QgAABUIBPkl9CAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAB7SURBVDhP3ZPR
+        CcAgDETdpXSGTlG6o4M4gJO4REnzIIKUg1L8aj8ehHh3YtRkZpI1H9uS9wrUSgOyCW4sjgVFaUA2wU1t
+        CGhKA7IJHwqIaTMwDCOn0wOo7+sFLztxVV34ljofMH0ENRgIUQ/49TtQTXDT3GeK23n4zpYuFk2JJ4hW
+        q3IAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnDetalhesCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAAG0AAABtAY5cH8oAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
-        bmtzY2FwZS5vcmeb7jwaAAACi0lEQVQ4T2P4//8/RRir4O1tt9lFRUVVsMmhYwyBptqGmJDg4PcFeflP
-        VVVU5zEwMPCjq0HGcMay2cvEYyKjTtdUVf979ujJ/3s37/y/fvHqH08Pz7MiIiLRyJqQMZgoKSppCg8N
-        +3biyLH/F3bt+T+zveN/W3Pr//LSsv9PHzz+v3jBopfa2tqbgK6RxTCguqpqalF+4f9XT57/b4uO/l+q
-        pvJ/q6Xp/yR7+/8rFy39Hx8b/3/tyjX/H997+D8+Lv6KtLR0FdAgZrgBnh4e3x7euf9/745d/6OBmjZa
-        m///6O70/01E8H8XC4v/N65c+z+xb8L/rIys/zev3vi/d+eeTyZGJgdYWVmNwAaEBIe8ffP81f/Oto7/
-        ZcWl/6e0d/6PtbP9v2nFyv97gIZuWrfhf2J8wv+F8+b/z83O+b904eL/r56++F9ZXnlHRkZmIoOamtrK
-        7Zu3fQcZcvn8xf/pqWn/F81f+H/NitVgQxvr6v9XV1SBXTFn5uz/D27f+3/r2s3/KUnJ7/T09PKB3mFg
-        A8b53OlTpp0BGQLCyxYt+Z+Wkvp/+eKl/xPiQGGw+v/GtevBclMnTfmfDpSb0j/xs4uj4xpEaAJ9Y2xo
-        vPXahcuvQAof3X0AjgWQzVfOX/p//vQ5YIDG/Z82YdL/yLDwF8W5eT+1NDRWww2AGsLPx8vXW1RYdOj1
-        s5f/QAaB0gMo8NxcXP+3NTa/D/Lz/9DW0PBOVUlpF1C9MooBSAZZKSkprT+4d99dkCENNXXvEqJifjRU
-        Vf31cHE7KyAgUAxUwwRWi64ZhoGAlY2NrTw8NHxnQ03tk/iomNtyMjKrgeIyKOqQOdgwEIjs379fxgAI
-        sMpjEyQe/2cAANpni+P5CaOHAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        bQAAAG0BjlwfygAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKLSURBVDhPY/j/
+        /z9FGKvg7W232UVFRVWwyaFjDIGm2oaYkODg9wV5+U9VVVTnMTAw8KOrQcZwxrLZy8RjIqNO11RV/3v2
+        6Mn/ezfv/L9+8eofTw/PsyIiItHImpAxmCgpKmkKDw37duLIsf8Xdu35P7O9439bc+v/8tKy/08fPP6/
+        eMGil9ra2puArpHFMKC6qmpqUX7h/1dPnv9vi47+X6qm8n+rpen/JHv7/ysXLf0fHxv/f+3KNf8f33v4
+        Pz4u/oq0tHQV0CBmuAGeHh7fHt65/3/vjl3/o4GaNlqb///o7vT/TUTwfxcLi/83rlz7P7Fvwv+sjKz/
+        N6/e+L93555PJkYmB1hZWY3ABoQEh7x98/zV/862jv9lxaX/p7R3/o+1s/2/acXK/3uAhm5at+F/YnzC
+        /4Xz5v/Pzc75v3Th4v+vnr74X1leeUdGRmYig5qa2srtm7d9Bxly+fzF/+mpaf8XzV/4f82K1WBDG+vq
+        /1dXVIFdMWfm7P8Pbt/7f+vazf8pScnv9PT08oHeYWADxvnc6VOmnQEZAsLLFi35n5aS+n/54qX/E+JA
+        YbD6/8a168FyUydN+Z8OlJvSP/Gzi6PjGkRoAn1jbGi89dqFy69ACh/dfQCOBZDNV85f+n/+9DlggMb9
+        nzZh0v/IsPAXxbl5P7U0NFbDDYAaws/Hy9dbVFh06PWzl/9ABoHSAyjw3Fxc/7c1Nr8P8vP/0NbQ8E5V
+        SWkXUL0yigFIBlkpKSmtP7h3312QIQ01de8SomJ+NFRV/fVwcTsrICBQDFTDBFaLrhmGgYCVjY2tPDw0
+        fGdDTe2T+KiY23IyMquB4jIo6pA52DAQiOzfv1/GAAiwymMTJB7/ZwAA2meL4/kJo4cAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="btnExcluirCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAAG0AAABtAY5cH8oAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
-        bmtzY2FwZS5vcmeb7jwaAAAAoklEQVQ4T62TwQ2AIBAEqcGnUIX1WwM1GP3bwsle3AinoEYf6+NuZ4IG
-        nYhopr4fFu/HJYSOMxvs0EGXM31gMHu/pkgqxCvJDkd00KWkgBkrMTCjEocjmYWGkgrMzlizsxCbu8S2
-        jlgNYf0GN+95Sg4XgicSCyP/Ce5gxkpewUwuacJabO0S+/0ifb7KKOQSC1ckx8/EAgY40hXM7JLsdxa3
-        ATc+HWPpGqo8AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        bQAAAG0BjlwfygAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACiSURBVDhPrZPB
+        DYAgEASpwadQhfVbAzUY/dvCyV7cCKegRh/r425nggadiGimvh8W78clhI4zG+zQQZczfWAwe7+mSCrE
+        K8kOR3TQpaSAGSsxMKMShyOZhYaSCszOWLOzEJu7xLaOWA1h/QY373lKDheCJxILI/8J7mDGSl7BTC5p
+        wlps7RL7/SJ9vsoo5BILVyTHz8QCBjjSFczskux3FrcBNz4dY+kaqjwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnEditarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAABCUAAAQlAaax3gkAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
-        bmtzY2FwZS5vcmeb7jwaAAABY0lEQVQ4T42QvUrDUBiG00uwCk20eAF6E06KVcTFwb/d2YvoYIqbg9Uo
-        gqCTXSyIkWoaqgSao0utoFVKUZAmoiKKdjieNyExhhPN8ORwwve8vN8RKKWx0fX9rtr8RLY+k2ldTo8p
-        17Ojae4gj9PaQbJxU94xDotn9bnxDguhCOEOh3lZTicfm+p2804v3TbKWiCkxRWCQH6SpapdGi6274+0
-        YAjW4UoentwupE6sNbFqbw1deSFYB2/CFcFrtq+byaYvL0nUOVkTrIM3wVykbMkSceS8aHoy7miEZt5s
-        tLwXkNnJk8FvOdfbY8vSeYRshmXAl1dF4su4s0ZoFhQ9fuScdOHKkiuzkP9kgE/CVgd3LbWf2Jupiiu7
-        b4BGf8lA+CQbAx2i0Gct4+7NQnyZNeNJQYQvoiwg4N1YJE4ImrB14shAeDheWX8z8h8IAVgnrgyEkcmp
-        AkLQBOuwn4nwUDRU+AbGybrQseUTrQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
+        JQAABCUBprHeCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFjSURBVDhPjZC9
+        SsNQGIbTS7AKTbR4AXoTTopVxMXBv93Zi+hgipuD1SiCoJNdLIiRahqqBJqjS62gVUpRkCaiIop2OJ43
+        ITGGE83w5HDC97y83xEopbHR9f2u2vxEtj6TaV1OjynXs6Np7iCP09pBsnFT3jEOi2f1ufEOC6EI4Q6H
+        eVlOJx+b6nbzTi/dNspaIKTFFYJAfpKlql0aLrbvj7RgCNbhSh6e3C6kTqw1sWpvDV15IVgHb8IVwWu2
+        r5vJpi8vSdQ5WROsgzfBXKRsyRJx5LxoejLuaIRm3my0vBeQ2cmTwW8519tjy9J5hGyGZcCXV0Xiy7iz
+        RmgWFD1+5Jx04cqSK7OQ/2SAT8JWB3cttZ/Ym6mKK7tvgEZ/yUD4JBsDHaLQZy3j7s1CfJk140lBhC+i
+        LCDg3VgkTgiasHXiyEB4OF5ZfzPyHwgBWCeuDISRyakCQtAE67CfifBQNFT4BsbJutCx5ROtAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
